--- a/app/src/main/res/layout/chat_user_list.xml
+++ b/app/src/main/res/layout/chat_user_list.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:clickable="true"
+    android:focusable="true"
+    android:background="?attr/selectableItemBackground"
     android:layout_height="wrap_content">
 
     <ImageView
@@ -22,7 +25,6 @@
         android:layout_marginStart="@dimen/space_normal"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textColor="@color/blue_500"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/tv_time"
         app:layout_constraintStart_toEndOf="@id/iv_avatar"
@@ -52,6 +54,7 @@
         tools:text="1"
         android:textSize="12sp"
         android:background="@drawable/chat_count_circle_background"
+        android:backgroundTint="@color/blue_500"
         android:textColor="@color/white"
         app:fontFamily="@font/poppins_semi_bold"
         android:layout_marginEnd="@dimen/space_normal"
