--- a/app/src/main/res/layout/fragment_my_chat.xml
+++ b/app/src/main/res/layout/fragment_my_chat.xml
@@ -28,10 +28,11 @@
         android:id="@+id/sv_mychats"
         android:layout_width="0dp"
         android:layout_height="36dp"
-        android:background="@color/white"
         android:layout_marginStart="@dimen/space_large"
         android:layout_marginEnd="@dimen/space_normal"
+        android:background="@color/white"
         android:iconifiedByDefault="false"
+        android:queryBackground="@color/white"
         android:translationZ="@dimen/space_tiny"
         app:layout_constraintBottom_toBottomOf="@id/cv_header"
         app:layout_constraintEnd_toEndOf="parent"
@@ -42,8 +43,18 @@
         android:id="@+id/rv_mychats"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        tools:listitem="@layout/chat_user_list"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/cv_header"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:listitem="@layout/chat_user_list" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_new"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_large"
+        android:backgroundTint="@color/orange_500"
+        android:src="@drawable/ic_baseline_add_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:borderWidth="0dp"
+        app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
