--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -8,6 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:layout_marginBottom="@dimen/space_large"
         android:layout_height="wrap_content">
 
         <Button
@@ -224,6 +225,18 @@
             app:layout_constraintTop_toBottomOf="@id/tv_topic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
+
+        <Button
+            android:id="@+id/btn_logout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_topic"
+            android:layout_marginTop="@dimen/space_normal"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:text="@string/logout"
+            android:backgroundTint="@color/red_500"
+            android:layout_marginBottom="@dimen/space_large"
+            style="@style/Button"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
