--- a/app/src/main/res/layout/activity_friends_profile.xml
+++ b/app/src/main/res/layout/activity_friends_profile.xml
@@ -103,8 +103,8 @@
 
         <ImageView
             android:id="@+id/iv_native"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
             android:layout_marginHorizontal="@dimen/space_large"
             android:layout_marginTop="@dimen/space_extra_small"
             android:src="@drawable/ic_unknown_flag"
@@ -133,8 +133,8 @@
 
         <ImageView
             android:id="@+id/iv_learn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
             android:layout_marginHorizontal="@dimen/space_large"
             android:layout_marginTop="@dimen/space_extra_small"
             android:src="@drawable/ic_unknown_flag"
