--- a/app/src/main/res/layout/fragment_language.xml
+++ b/app/src/main/res/layout/fragment_language.xml
@@ -71,6 +71,36 @@
             app:layout_constraintStart_toEndOf="@id/iv_learn"
             app:layout_constraintEnd_toEndOf="parent"/>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:background="@drawable/edit_text_background"
+            app:layout_constraintBottom_toBottomOf="@id/atv_interests"
+            app:layout_constraintTop_toTopOf="@id/atv_interests" />
+
+        <AutoCompleteTextView
+            android:id="@+id/atv_interests"
+            app:layout_constraintTop_toBottomOf="@id/et_learn"
+            android:layout_width="match_parent"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:hint="Choose your interests"
+            android:layout_marginTop="@dimen/space_normal"
+            android:inputType="none"
+            android:backgroundTint="@color/white"
+            android:textSize="14sp"
+            android:layout_height="wrap_content"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_interest"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            tools:listitem="@layout/chips_item"
+            android:layout_marginStart="@dimen/space_normal"
+            tools:itemCount="1"
+            app:layout_constraintTop_toBottomOf="@id/atv_interests"/>
+
         <Button
             android:id="@+id/btn_save"
             style="@style/Button.Big"
@@ -78,7 +108,7 @@
             android:layout_marginVertical="@dimen/space_extra_large"
             android:text="@string/save"
             app:cornerRadius="@dimen/space_normal"
-            app:layout_constraintTop_toBottomOf="@+id/et_learn"
+            app:layout_constraintTop_toBottomOf="@+id/rv_interest"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
